[package]
name = "xlabs-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
http_req = { version = "0.9.0", default-features = false, features = [
    "rust-tls",
] }
sha1_smol = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"